// ERD con C3.3a — Khen thưởng & hồ sơ CÁ NHÂN (ĐẦY ĐỦ cột, sao quanh QuanNhan).
// CỐ Ý bỏ FK qua so_quyet_dinh ở đây để tránh rối; xem riêng ERD-5 (Quyết định).
Project erd_kt_ca_nhan { database_type: 'PostgreSQL' }

Table QuanNhan {
  id varchar(30) [pk]
  ho_ten varchar(255)
  cap_bac varchar(50)
  Note: 'stub — chi tiết ở ERD-1'
}
Table CoQuanDonVi {
  id varchar(30) [pk]
  ten_don_vi varchar(255)
  Note: 'stub — chi tiết ở ERD-1'
}
Table DonViTrucThuoc {
  id varchar(30) [pk]
  ten_don_vi varchar(255)
  Note: 'stub — chi tiết ở ERD-1'
}

Table DanhHieuHangNam {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  nam int [not null]
  danh_hieu varchar(20) [note: 'CSTDCS | CSTT | null']
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  nhan_bkbqp boolean [not null, default: false]
  so_quyet_dinh_bkbqp varchar(100)
  ghi_chu_bkbqp text
  nhan_cstdtq boolean [not null, default: false]
  so_quyet_dinh_cstdtq varchar(100)
  ghi_chu_cstdtq text
  nhan_bkttcp boolean [not null, default: false]
  so_quyet_dinh_bkttcp varchar(100)
  ghi_chu_bkttcp text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
  Indexes { (quan_nhan_id, nam) [unique] }
}

Table ThanhTichKhoaHoc {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  nam int [not null]
  loai varchar(10) [not null, note: 'DTKH | SKKH']
  mo_ta varchar(500) [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KhenThuongHCCSVV {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null]
  danh_hieu varchar(20) [not null, note: 'HANG_BA | HANG_NHI | HANG_NHAT']
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
  Indexes { (quan_nhan_id, danh_hieu) [unique] }
}

Table KhenThuongHCBVTQ {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  danh_hieu varchar(20) [not null]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian_nhom_0_7 jsonb
  thoi_gian_nhom_0_8 jsonb
  thoi_gian_nhom_0_9_1_0 jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HuanChuongQuanKyQuyetThang {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KyNiemChuongVSNXDQDNDVN {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  nam int [not null]
  thang int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  thoi_gian jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table KhenThuongDotXuat {
  id varchar(30) [pk]
  loai varchar(30) [not null, default: 'KHEN_THUONG_DOT_XUAT']
  doi_tuong varchar(20) [not null, default: 'CA_NHAN', note: 'CA_NHAN | TAP_THE']
  quan_nhan_id varchar(30)
  co_quan_don_vi_id varchar(30)
  don_vi_truc_thuoc_id varchar(30)
  hinh_thuc_khen_thuong varchar(255) [not null]
  nam int [not null]
  cap_bac varchar(50)
  chuc_vu varchar(255)
  ghi_chu text
  so_quyet_dinh varchar(100)
  files_dinh_kem jsonb
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoNienHan {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  hccsvv_hang_ba_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_ba_ngay date
  hccsvv_hang_nhi_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_nhi_ngay date
  hccsvv_hang_nhat_status varchar(20) [not null, default: 'CHUA_DU']
  hccsvv_hang_nhat_ngay date
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoCongHien {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  hcbvtq_total_months int [not null, default: 0]
  months_07 int [not null, default: 0]
  months_08 int [not null, default: 0]
  months_0910 int [not null, default: 0]
  hcbvtq_hang_ba_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_ba_ngay date
  hcbvtq_hang_nhi_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_nhi_ngay date
  hcbvtq_hang_nhat_status varchar(20) [not null, default: 'CHUA_DU']
  hcbvtq_hang_nhat_ngay date
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table HoSoHangNam {
  id varchar(30) [pk]
  quan_nhan_id varchar(30) [not null, unique]
  tong_cstdcs int [not null, default: 0]
  tong_nckh int [not null, default: 0]
  tong_cstdcs_json jsonb
  tong_nckh_json jsonb
  cstdcs_lien_tuc int [not null, default: 0]
  nckh_lien_tuc int [not null, default: 0]
  bkbqp_lien_tuc int [not null, default: 0]
  cstdtq_lien_tuc int [not null, default: 0]
  du_dieu_kien_bkbqp boolean [not null, default: false]
  du_dieu_kien_cstdtq boolean [not null, default: false]
  du_dieu_kien_bkttcp boolean [not null, default: false]
  goi_y text
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Ref: DanhHieuHangNam.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: ThanhTichKhoaHoc.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: KhenThuongHCCSVV.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: KhenThuongHCBVTQ.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: HuanChuongQuanKyQuyetThang.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: KyNiemChuongVSNXDQDNDVN.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: KhenThuongDotXuat.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: KhenThuongDotXuat.co_quan_don_vi_id > CoQuanDonVi.id [delete: cascade]
Ref: KhenThuongDotXuat.don_vi_truc_thuoc_id > DonViTrucThuoc.id [delete: cascade]
Ref: HoSoNienHan.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: HoSoCongHien.quan_nhan_id > QuanNhan.id [delete: cascade]
Ref: HoSoHangNam.quan_nhan_id > QuanNhan.id [delete: cascade]
